# conservative_pid

./: .gitignore  README.md  canonical.py  demo_vectorized_basis.py  inference.py  logging_config.py  mkdocs.yml  pyproject.toml  solver.py  symbolic.py
cpid/: __init__.py  io.py  lp.py  mdd.py  signature.py
docs/: index.md
docs/api/: canonical.md  inference.md  solver.md  symbolic.md
experiments/: test.py  verify_experiment.py
experiments/Balke&Pearl1997/: balke_4_1_vitaminA_results.csv  balke_4_1_vitaminA_treated_control_results.csv  balke_4_2_lipid_results.csv  coronary_prevention.py  lipid_treated_control_results.csv  vitaminAsupplement.py
experiments/Mueller2022/: inflammation_mediator.py
experiments/PoC/: helpers.py  tianpearl2000_exp.py  tianpearl2000_mono.py  tianpearl2000_obs.py  tianpearl2000_obs_stress.py  timings.csv
experiments/Sachsetal2023/: confounded_exposure_outcome.py  measurement_error_outcome.py  sachs_6_1_ternary_contrast_results.csv  sachs_6_3_measurement_error_results.csv
experiments/Tian&Pearl2000/: tian_pearl_poc_experiment.ipynb
notebooks/: binary_example.ipynb  binary_experiment.ipynb  lib_exploration.ipynb  symbolic.ipynb  symbolic_showcase.ipynb  three_variable_experiment.ipynb  tian_pearl_poc_experiment.ipynb
site/: 404.html  index.html  objects.inv
site/api/canonical/: index.html
site/api/solver/: index.html
site/api/symbolic/: index.html
site/search/: search_index.json
src/: __init__.py  canonical.py  inference.py  solver.py  symbolic.py
tests/: test_basis_generator.py  test_canonical.py  test_equivalence_classes.py  test_inference_marginalization.py  test_inference_monotonicity.py  test_inference_validation.py  test_io.py  test_mdd.py  test_monotonicity.py  test_signature.py  test_signature_compatibility.py  test_signature_query_evaluator.py  test_solver_expression.py  test_symbolic.py  test_vectorized_basis.py
