[project]
name = "conservative-pid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pulp>=3.3.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
    "pyrefly>=0.49.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
