[project]
name = "conservative-pid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kaleido>=1.3.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "orderly-set>=5.5.0",
    "pandas>=3.0.0",
    "pgmpy>=1.0.0",
    "plotly>=6.7.0",
    "pulp>=3.3.0",
    "pyagrum>=2.3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "tabulate>=0.10.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "."
]
